@@ -8,73 +8,78 @@ import com.roman.taskoop.exception.CustomException;
 import com.roman.taskoop.service.filereader.ReadFromFile;
 import com.roman.taskoop.validator.StringValidator;
 import com.roman.taskoop.validator.impl.StringValidatorImpl;
+import org.apache.logging.log4j.Level;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import java.io.BufferedReader;
-import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+
 
 public class ReadFromFileImpl implements ReadFromFile {
+    static Logger logger = LogManager.getLogger();
     private static final String FILE_NAME = "data\\InputFile.txt";
     private static final String SEPARATOR = "\\s+";
-    String fileName;
 
     @Override
     public FloorCareAppliance floorReader(String filename) throws CustomException {
         FloorCareAppliance floorCareAppliance = new FloorCareAppliance();
         StringValidator stringValidator = new StringValidatorImpl();
         int[] ints;
-        String[] strings;
+        String[] typeStrings;
         boolean[] booleans;
-        //double[] doubles;
-        Path path = Path.of(filename);
-        if (!Files.exists(path)){
-            throw new CustomException("File does not exists");
-            //filename = "data\\InputFile.txt";
+        double[] doubles;
+        Path path = Paths.get(filename);
+        if (!Files.exists(path)) {
+            logger.log(Level.WARN, "File does not exist.");
+            //filename = FILE_NAME;
         }
-        try {
-            BufferedReader bufferedReader = new BufferedReader(new FileReader(filename));
+        try (BufferedReader bufferedReader = new BufferedReader(new FileReader(filename))){
             String stringTmp = bufferedReader.readLine();
-            if (stringTmp != null){
+            if (stringTmp != null) {
                 String[] splitedString = stringTmp.split(SEPARATOR);
                 ints = new int[splitedString.length];
-                strings = new String[splitedString.length];
+                typeStrings = new String[splitedString.length];
                 booleans = new boolean[splitedString.length];
-               // doubles = new double[splitedString.length];
-                for (int i = 0; i < splitedString.length; i++){
-                    if (stringValidator.validateInt(splitedString[i])){
+                doubles = new double[splitedString.length];
+                for (int i = 0; i < splitedString.length; i++) {
+                    if (stringValidator.validateInt(splitedString[i])) {
                         ints[i] = Integer.parseInt(splitedString[i]);
-                        System.out.println(ints[i]);
+                        logger.log(Level.INFO, ints[i]);
                     }
                 }
-                for (int i = 0; i < splitedString.length; i++){
-                    if (stringValidator.validateString(splitedString[i])){
-                        strings[i] = splitedString[i];
-                        System.out.println(strings[i]);
+                for (int i = 0; i < splitedString.length; i++) {
+                    if (stringValidator.validateString(splitedString[i])) {
+                        typeStrings[i] = splitedString[i];
+                        logger.log(Level.INFO, typeStrings[i]);
                     }
                 }
-                for (int i = 0; i < splitedString.length; i++){
-                    if (stringValidator.validateBoolean(splitedString[i])){
+                for (int i = 0; i < splitedString.length; i++) {
+                    if (stringValidator.validateBoolean(splitedString[i])) {
                         booleans[i] = Boolean.parseBoolean(splitedString[i]);
+                        logger.log(Level.INFO, booleans[i]);
                     }
                 }
-//                for (int i = 0; i < splitedString.length; i++){
-//                    if (stringValidator.validateDouble(splitedString[i])){
-//                        doubles[i] = Double.parseDouble(splitedString[i]);
-//                    }
-//                }
-                floorCareAppliance = new FloorCareAppliance(floorCareAppliance.getApplianceId(), strings[0],strings[1], ints[2],
-                        ints[3], ints[4], booleans[5]);
-                System.out.println(floorCareAppliance);
+                for (int i = 0; i < splitedString.length; i++){
+                    if (stringValidator.validateDouble(splitedString[i])){
+                        doubles[i] = Double.parseDouble(splitedString[i]);
+                        logger.log(Level.INFO, doubles[i]);
+                    }
+                }
+                floorCareAppliance = new FloorCareAppliance(floorCareAppliance.getApplianceId(), typeStrings[0],
+                        typeStrings[1], ints[2], ints[3], ints[4], booleans[5]);
+            } else {
+                logger.log(Level.WARN, "No data. File is empty");
             }
-        } catch (FileNotFoundException e) {
-            throw new RuntimeException(e);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+        } catch (IOException ex){
+            ex.printStackTrace(System.out);
+            throw new CustomException("File is empty or File not Found");
         }
-        return null;
+        return floorCareAppliance;
     }
 
     @Override
